@@ -27,7 +27,6 @@
 using namespace std;
 
 
-
 void JTL::run( Session* session, const std::string& argument ){
 
   /* The argument should consist of 2 comma separated values:
@@ -82,8 +81,8 @@ void JTL::run( Session* session, const std::string& argument ){
   TileManager tilemanager( session->tileCache, *session->image, session->watermark, session->jpeg, session->logfile, session->loglevel );
 
   CompressionType ct;
-  if( (*session->image)->getColourSpace() == CIELAB ) ct = UNCOMPRESSED;
-  else if( (*session->image)->getNumBitsPerPixel() > 8 ) ct = UNCOMPRESSED;
+  if( (*session->image)->getNumBitsPerPixel() > 8 ) ct = UNCOMPRESSED;
+  else if( (*session->image)->getColourSpace() == CIELAB ) ct = UNCOMPRESSED;
   else if( session->view->getContrast() != 1.0 ) ct = UNCOMPRESSED;
   else if( session->view->getRotation() != 0.0 ) ct = UNCOMPRESSED;
   else if( session->view->shaded ) ct = UNCOMPRESSED;
@@ -91,6 +90,10 @@ void JTL::run( Session* session, const std::string& argument ){
 
   RawTile rawtile = tilemanager.getTile( resolution, tile, session->view->xangle,
 					 session->view->yangle, session->view->getLayers(), ct );
+
+  // For image sequences where images are not all the same bitdepth, the TileManager will return an uncompressed tile
+  if( rawtile.bpc > 8 ) ct = UNCOMPRESSED;
+
 
   int len = rawtile.dataLength;
 
@@ -148,7 +151,11 @@ void JTL::run( Session* session, const std::string& argument ){
 
 
   // Apply any contrast adjustments and/or clipping to 8bit from 16 or 32 bit
-  filter_contrast( rawtile, session->view->getContrast(), (*session->image)->max, (*session->image)->min );
+  float contrast = session->view->getContrast();
+  if( session->loglevel >= 3 ){
+    *(session->logfile) << "JTL :: Applying contrast of " << contrast << endl;
+  }
+  filter_contrast( rawtile, contrast, (*session->image)->max, (*session->image)->min );
 
 
   // Convert to greyscale if requested
